[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ScoreValue.gd" type="Script" id=3]
[ext_resource path="res://Audios/game_over_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://Fonts/PixeloidSans-nR3g1.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Images/single_menu_button.png" type="Texture" id=6]
[ext_resource path="res://Fonts/PixeloidMono-1G8ae.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 12 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=17]

[node name="GameOver" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 359.0
color = Color( 0, 0, 0, 0.862745 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 310.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameOverText" type="Label" parent="MarginContainer/VBoxContainer"]
pause_mode = 2
margin_right = 640.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
text = "Game Over"
align = 1
valign = 2

[node name="ScoreValue" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 640.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
text = "0"
align = 1
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 640.0
margin_bottom = 266.0
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 640.0
margin_bottom = 30.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 176.0
margin_right = 464.0
margin_bottom = 30.0
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 2.0
margin_right = 288.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.564706, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 13 )
text = "Back to Main Menu"
align = 1

[node name="HomeButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
enabled_focus_mode = 0
align = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 640.0
margin_bottom = 310.0
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_right = 640.0
margin_bottom = 30.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
margin_left = 176.0
margin_right = 464.0
margin_bottom = 30.0
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_top = 2.0
margin_right = 288.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.564706, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 13 )
text = "Restart"
align = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_right = 288.0
margin_bottom = 30.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
enabled_focus_mode = 0
align = 0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/HomeButton" to="." method="_on_HomeButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/MarginContainer/RestartButton" to="." method="_on_RestartButton_button_up"]
